trunk/Archive2/08/621fb5f8c4e1d3/output
main.cpp:7:5: error: static_assert failed
    static_assert(std::is_same<decltype(foo), void(*)()>{});
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
